<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>ubc.pavlab</groupId>
		<artifactId>pavlab-starter-parent</artifactId>
		<version>1.3.0-SNAPSHOT</version>
	</parent>
	<name>baseCode</name>
	<groupId>baseCode</groupId>
	<artifactId>baseCode</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<inceptionYear>2003</inceptionYear>
	<description>
		<![CDATA[Data structures, math and statistics tools, and utilities that are often needed across projects.]]>
	</description>
	<url>https://github.com/PavlidisLab/baseCode</url>
	<organization>
		<name>Pavlidis Lab</name>
		<url>https://pavlab.msl.ubc.ca/</url>
	</organization>
	<packaging>jar</packaging>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/PavlidisLab/baseCode/issues</url>
	</issueManagement>
	<ciManagement>
		<system>Jenkins</system>
		<url>https://jenkins.pavlab.msl.ubc.ca</url>
	</ciManagement>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Paul Pavlidis</name>
			<id>pavlidis</id>
			<email>paul@msl.ubc.ca</email>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Guillaume Poirier-Morency</name>
			<id>poirigui</id>
			<email>poirigui@msl.ubc.ca</email>
			<organization>University of British Columbia</organization>
		</developer>
	</developers>
	<dependencies>
		<!-- Excel utilities (optional) -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.4.1</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>colt</groupId>
			<artifactId>colt</artifactId>
			<version>1.2.0</version>
		</dependency>

		<!-- Apache Commons -->
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.17.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.5.0</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.19.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.3.5</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.14.1</version>
		</dependency>

		<!-- R engine -->
		<!-- rJava -->
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>REngine</artifactId>
			<version>${rJava.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>Rserve</artifactId>
			<version>${rserve.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>JRI</artifactId>
			<version>${rJava.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>JRIEngine</artifactId>
			<version>${rJava.version}</version>
			<optional>true</optional>
		</dependency>

		<!-- Sparse matrix library; lapack -->
		<dependency>
			<groupId>com.googlecode.matrix-toolkits-java</groupId>
			<artifactId>mtj</artifactId>
			<version>1.0.4</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.fommil.netlib</groupId>
					<artifactId>core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.fommil.netlib</groupId>
			<artifactId>core</artifactId>
			<version>1.1.2</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<!-- Jena -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>2.13.0</version>
			<exclusions>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-tdb</artifactId>
			<version>1.1.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>jcl-over-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-lang3</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.thrift</groupId>
					<artifactId>libthrift</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient-cache</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-csv</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>jsonld-java</artifactId>
					<groupId>com.github.jsonld-java</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Lucene -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<!-- Utilities -->
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.6</version>
		</dependency>
		<!-- xml-apis is dependent on jena -->
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<!--suppress MavenPackageUpdate -->
			<version>1.4.01</version>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.2</version>
		</dependency>

		<!-- Development tools -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>

		<!-- Testing utilities -->
		<!-- FIXME: remove this dependency altogether, but it's used indirectly in ConfigUtilsTest -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<includes>
					<include>**/*.owl.gz</include>
					<include>**/*.properties</include>
					<include>**/*.R</include>
				</includes>
				<filtering>false</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>test</directory>
				<includes>
					<include>**/*.txt</include>
					<include>**/*.xml</include>
					<include>**/*.csv</include>
					<include>**/*.xls</include>
					<include>**/*.zip</include>
					<include>**/*.gz</include>
					<include>**/*.properties</include>
					<include>**/*.R</include>
				</includes>
				<filtering>false</filtering>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${testJvmOptions}</argLine>
					<reportsDirectory>target/surefire-reports</reportsDirectory>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<!-- these tests should be run manually since they require external data -->
						<exclude>**/providers/*Test.java</exclude>
						<exclude>**/AllTests.java</exclude>
						<exclude>**/gui/Test*.java</exclude>
						<exclude>**/AbstractTest*.java</exclude>
						<exclude>**/*$*</exclude> <!-- should not need this -->
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<siteDirectory>site</siteDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<quiet>true</quiet>
					<doclint>none</doclint>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>dependencies</report>
							<report>ci-management</report>
							<report>issue-management</report>
							<report>licenses</report>
							<report>scm</report>
							<report>summary</report>
							<report>dependency-convergence</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<quiet>true</quiet>
					<doclint>none</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.12.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.6.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.5.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.27.0</version>
				<configuration>
					<targetJdk>11</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>2.1</version>
			</plugin>
		</plugins>
	</reporting>
	<repositories>
		<repository>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>https://maven2.pavlab.msl.ubc.ca/</url>
		</repository>
	</repositories>
	<distributionManagement>
		<site>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>scpexe://${pavlab.server}${pavlab.siteDir}/${project.groupId}/${project.artifactId}-${project.version}</url>
		</site>
	</distributionManagement>
	<profiles>
		<profile>
			<!-- For deployment where host is local (and ssh isn't available for builder, e.g. CI) -->
			<id>local-deploy</id>
			<distributionManagement>
				<site>
					<id>pavlab</id>
					<name>PavLab</name>
					<url>file://${pavlab.siteDir}/${project.groupId}/${project.artifactId}-${project.version}</url>
				</site>
			</distributionManagement>
		</profile>
		<profile>
			<id>java24</id>
			<activation>
				<jdk>(24,</jdk>
			</activation>
			<properties>
				<additionalTestJvmOptions>
					--enable-native-access=ALL-UNNAMED
				</additionalTestJvmOptions>
			</properties>
		</profile>
	</profiles>
	<properties>
		<java.version>8</java.version>
		<java.jdk.version>11</java.jdk.version>
		<lucene.version>3.6.2</lucene.version>
		<!-- rJava -->
		<!-- You may override this in ~/.m2/settings.xml -->
		<rJava.version>1.0-13</rJava.version>
		<rJava.libDir>/usr/lib64/R/library/rJava/jri</rJava.libDir>
		<rserve.version>1.8-14</rserve.version>
		<testJvmOptions>
			-Djava.awt.headless=true
			-Djava.library.path=${rJava.libDir}
			-javaagent:${org.mockito:mockito-core:jar}
			${additionalTestJvmOptions}
		</testJvmOptions>
		<additionalTestJvmOptions/>
	</properties>
</project>
